--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -105,7 +105,48 @@
             </div>
             <div id="hall" class="tab-pane fade">
               <h3>Hall of fame</h3>
-              <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/image01.png">
+                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      </a>
+                      <div class="desc">Add a description of the image here</div>
+                    </div>
+                  </div>
+
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/image01.png">
+                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      </a>
+                      <div class="desc">Add a description of the image here</div>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/image01.png">
+                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      </a>
+                      <div class="desc">Add a description of the image here</div>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/image01.png">
+                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      </a>
+                      <div class="desc">Add a description of the image here</div>
+                    </div>
+                  </div>
+
+                  <div class="clearfix"></div>
+
+
+
             </div>
           </div>
         </div>
