--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -108,40 +108,68 @@
 
                   <div class="responsive">
                     <div class="gallery">
-                      <a target="_blank" href="../assets/images/image01.png">
-                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      <a target="_blank" href="../assets/images/gallery/image01.jpg">
+                        <img src="../assets/images/gallery/image01.jpg" alt="Image KH" width="300" height="200">
                       </a>
-                      <div class="desc">Add a description of the image here</div>
-                    </div>
-                  </div>
-
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/image01.png">
-                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
-                      </a>
-                      <div class="desc">Add a description of the image here</div>
                     </div>
                   </div>
 
                   <div class="responsive">
                     <div class="gallery">
-                      <a target="_blank" href="../assets/images/image01.png">
-                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      <a target="_blank" href="../assets/images/gallery/image02.jpg">
+                        <img src="../assets/images/gallery/image02.jpg" alt="Image KH" width="300" height="200">
                       </a>
-                      <div class="desc">Add a description of the image here</div>
                     </div>
                   </div>
 
                   <div class="responsive">
                     <div class="gallery">
-                      <a target="_blank" href="../assets/images/image01.png">
-                        <img src="../assets/images/image01.png" alt="Trolltunga Norway" width="300" height="200">
+                      <a target="_blank" href="../assets/images/gallery/image03.jpg">
+                        <img src="../assets/images/gallery/image03.jpg" alt="Image KH" width="300" height="200">
                       </a>
-                      <div class="desc">Add a description of the image here</div>
                     </div>
                   </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/gallery/image04.jpg">
+                        <img src="../assets/images/gallery/image04.jpg" alt="Image KH" width="300" height="200">
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/gallery/image05.jpg">
+                        <img src="../assets/images/gallery/image05.jpg" alt="Image KH" width="300" height="200">
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/gallery/image06.jpg">
+                        <img src="../assets/images/gallery/image06.jpg" alt="Image KH" width="300" height="200">
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/gallery/image07.jpg">
+                        <img src="../assets/images/gallery/image07.jpg" alt="Image KH" width="300" height="200">
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="responsive">
+                    <div class="gallery">
+                      <a target="_blank" href="../assets/images/gallery/image08.jpg">
+                        <img src="../assets/images/gallery/image08.jpg" alt="Image KH" width="300" height="200">
+                      </a>
+                    </div>
+                  </div>
+
 
                   <div class="clearfix"></div>
 
