--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -87,7 +87,7 @@
             <div id="tickets" class="tab-pane fade">
               <h3>Tickets</h3>
               <div>
-                  <iframe class="iframeTickets" width="650" height="1600" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1">
+                  <iframe class="iframeTickets" allowTransparency="true" width="650" height="2000" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1">
                       <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
                   </iframe>
               </div>
