--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -6,7 +6,7 @@
 
     <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
-    <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+    <form #formData='ngForm' class="loginForm" (ngSubmit)="onSubmit(formData)">
 
       <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
       <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
