--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,7 +14,8 @@
       <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
         <input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
-        <input type="text" placeholder="name" (ngModel)="name" name="name" class="txt form-control text-line" required>
+        <input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
+        <input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
         <input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
         <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt form-control text-line" required>
         <input type="password" placeholder="Retype Password" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
