--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
     <a routerLink="/signup" id="goback">Register</a>
-    <a href="mailto:rdiazroman@gmail.com" target="_top" id="goback" class="contactUs" >Contact us</a>
+    <a href="mailto:klang-heimlich@lid.li" target="_top" id="goback" class="contactUs" >Contact us</a>
 
     <img src="../assets/images/login_text.png" />
 
