--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -39,50 +39,81 @@
 
           <div class="tab-content">
             <div id="info" class="tab-pane fade in active">
-              <h3>INFO</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ka ak  kaa a a asd asd asd ka ak  kaa a a asd asd asdka ak  kaa a a asd asd asdka ak  kaa a a asd asd asdka ak  kaa a a asd asd asd</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p> END  </p>
+              <h3></h3>
+              <p>
+                Schön, dass Du den Weg hierher gefunden hast. Dani, Phil, Marc und Tom haben sich mit Klang-Heimlich zum Ziel gesetzt, einzigartige Events zu schaffen.
+                Events, auf welchen neue Freundschaften geschlossen werden, getanzt, gelacht, gelebt wird. Events, bei welchen die Musik und die Location im Mittelpunkt stehen und einzigartig sind. Events, die in Sachen Dekoration und Verspieltheit herausstechen. Events, bei denen Erinnerungen nicht nur bis zum nächsten Wochenende reichen, sondern weit darüber hinaus. Events, welche musikalisch durch ausgesuchte Lokale und Internationale DJ’s Balsam für die Ohren sind.
+              </p>
+              <p>Wir freuen uns Dich mit dieser Plattform auf unsere nächsten Klang-Heimlich Events aufmerksam zu machen und Dich bald bei uns begrüssen zu dürfen.</p>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image01.jpg">
+                    <img src="../assets/images/gallery/image01.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image02.jpg">
+                    <img src="../assets/images/gallery/image02.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image03.jpg">
+                    <img src="../assets/images/gallery/image03.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image04.jpg">
+                    <img src="../assets/images/gallery/image04.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image05.jpg">
+                    <img src="../assets/images/gallery/image05.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image06.jpg">
+                    <img src="../assets/images/gallery/image06.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image07.jpg">
+                    <img src="../assets/images/gallery/image07.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+              <div class="responsive">
+                <div class="gallery">
+                  <a target="_blank" href="../assets/images/gallery/image08.jpg">
+                    <img src="../assets/images/gallery/image08.jpg" alt="Image KH" width="300" height="200">
+                  </a>
+                </div>
+              </div>
+
+
+              <div class="clearfix"></div>
+
+
             </div>
             <div id="tickets" class="tab-pane fade">
               <h3>Tickets</h3>
@@ -100,78 +131,14 @@
                   <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
               </iframe>
 
+              <a href="mailto:klang-heimlich@lid.li" target="_top" id="goback" class="contactUs" >Or send us an email</a>
 
 
             </div>
             <div id="hall" class="tab-pane fade">
               <h3>Hall of fame</h3>
 
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image01.jpg">
-                        <img src="../assets/images/gallery/image01.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
 
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image02.jpg">
-                        <img src="../assets/images/gallery/image02.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image03.jpg">
-                        <img src="../assets/images/gallery/image03.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image04.jpg">
-                        <img src="../assets/images/gallery/image04.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image05.jpg">
-                        <img src="../assets/images/gallery/image05.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image06.jpg">
-                        <img src="../assets/images/gallery/image06.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image07.jpg">
-                        <img src="../assets/images/gallery/image07.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-                  <div class="responsive">
-                    <div class="gallery">
-                      <a target="_blank" href="../assets/images/gallery/image08.jpg">
-                        <img src="../assets/images/gallery/image08.jpg" alt="Image KH" width="300" height="200">
-                      </a>
-                    </div>
-                  </div>
-
-
-                  <div class="clearfix"></div>
 
 
 
