--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -29,3 +29,11 @@ form {
 .form-container {
     height: 40rem;
 }
+
+.imagelogo {
+    width: 5rem;
+    height: 5rem;
+    display: block;
+    margin: 0 auto;
+    margin-top: -3rem;
+}
