--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,7 +5,9 @@
       <a href="mailto:rdiazroman@gmail.com" target="_top" id="goback" class="contactUs" >Contact us</a>
 
       <br />
-      <br />
+
+      <img class="imagelogo" src="../assets/images/logo.svg" />
+
 
       <img src="../assets/images/register_text.jpg" />
 
