change contact email

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -101,7 +101,7 @@
               </iframe>
 
               <br />
-              <a href="mailto:klang-heimlich@lid.li" target="_top" class="contactUs" >oder schreib uns eine E-Mail</a>
+              <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" class="contactUs" >oder schreib uns eine E-Mail</a>
 
 
             </div>
