--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -1,7 +1,7 @@
 <div class="form-container">
 
     <a routerLink="/signup" id="goback">Register</a>
-    <a href="mailto:klang-heimlich@lid.li" target="_top" id="goback" class="contactUs" >Kontakt</a>
+    <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" id="goback" class="contactUs" >Kontakt</a>
 
     <br />
 
