--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,7 +2,7 @@
     <div class="form-container">
 
       <a routerLink="/login-email" id="goback">Login</a>
-      <a href="mailto:klang-heimlich@lid.li" target="_top" id="goback" class="contactUs" >Kontakt</a>
+      <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" id="goback" class="contactUs" >Kontakt</a>
 
       <br />
 
