--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,66 +1,8 @@
 <div class="form-container">
 
-  <h1> Hello I'm the terms! </h1>
+  <h3> Terms: </h3>
   <div>
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-    Bla bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-     bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-      bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-       bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
-
-   bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-    bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla  bla bla
-
+      Hiermit bestätige ich, dass ich volljährig bin und dass ich die mit der Veranstaltung verbundenen Kosten aus freiem Wille gezahlt habe und diese ausschliesslich dazu bestimmt sind, die Unkosten der Veranstaltung zu decken.
   </div>
 
 
