--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -9,7 +9,7 @@
       <img class="imagelogo" src="../assets/images/logo.svg" />
 
 
-      <img src="../assets/images/register_text.jpg" />
+      <img class="imageRegister" src="../assets/images/register_text.jpg" />
 
       <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
