--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -135,12 +135,21 @@
 
             </div>
             <div id="tickets" class="tab-pane fade">
+
+              <!--
               <h3>Tickets</h3>
               <div>
-                  <iframe _ngcontent-geq-7="" allowtransparency="true" class="iframeTickets" height="2000" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1" width="650" sandbox="allow-same-origin allow-forms allow-scripts allow-top-navigation">
-                      <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
-                  </iframe>
+                  <script src="http://embed.ticketfrog.ch/api/safari-cookie-fix.js"></script>
+                  <iframe width="650" class="iframeTickets" height="2000" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1"></iframe>
               </div>
+                -->
+
+              
+              <a style="font-size:1.8rem" target="_blank" href="https://ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html">
+                  Tickets hier kaufen
+              </a>
+
+
             </div>
             <div id="contact" class="tab-pane fade">
               <h3>Contact</h3>
