add reset password

--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -18,4 +18,6 @@
 
       <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
   </form>
+
+  <a routerLink="/reset" id="reset">forgot password?</a>
 </div>
