--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -1,20 +1,26 @@
 <div class="form-container">
 
-    <a routerLink="/signup" id="goback">Register</a>
+    <a routerLink="/signup" id="goback">Register</a> / <a routerLink="/login-email" id="goback">Login</a>
     <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" id="goback" class="contactUs" >Kontakt</a>
 
     <br />
 
     <img class="imagelogo" src="../assets/images/logo.svg" />
 
-    Reset Password
+    <br />
+    <p class="resetText">Reset Password:</p>
 
     <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
-    <form #formData='ngForm' class="loginForm" (ngSubmit)="onSubmit(formData)">
+    <form #formData='ngForm' class="resetForm" (ngSubmit)="onSubmit(formData)">
+      <input type="email" placeholder="Email..." (ngModel)="email" name="email" class="txt" required>
+      <button type="submit" [disabled]="!formData.valid" class="basic-btn">Reset</button>
+    </form>
 
-      <input type="email" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
-
-      <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
-  </form>
+    <div id="emailSent" class={{myClass}}>
+        Reset password email sent! {{myClass}}
+    </div>
+    <div id="emailError" class={{myClassEmail}}>
+        Error: {{emailErrorText}}
+    </div>
 </div>
