--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -19,5 +19,5 @@
       <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
   </form>
 
-  <a routerLink="/reset" id="reset">forgot password?</a>
+  <a routerLink="/reset" id="reset">Passwort vergessen?</a>
 </div>
