--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -8,7 +8,7 @@
     <img class="imagelogo" src="../assets/images/logo.svg" />
 
     <br />
-    <p class="resetText">Reset Password:</p>
+    <p class="resetText">Reset Passwort:</p>
 
     <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
@@ -18,7 +18,7 @@
     </form>
 
     <div id="emailSent" class={{myClass}}>
-        Reset password email sent! {{myClass}}
+        E-Mail mit neuem Passwort geschickt!
     </div>
     <div id="emailError" class={{myClassEmail}}>
         Error: {{emailErrorText}}
