change ticket url

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -46,24 +46,16 @@
 
                 <b>LINE-UP:</b> <br />
 
-                ♫ DAVID DORAD (Bar25 Berlin)  <br />
-                ♫ ALEJANDRO MOSSO *LIVE*<br />
-                ♫ POWEL<br />
-                ♫ BERNSTEIN *LIVE*<br />
-                ♫ Dani Posada<br />
-                ♫ Dani Nydegger<br />
-                ♫ Don Ramon<br />
-                ♫ Juen & Bach<br />
-                ♫ Matija<br />
-                ♫ Nicolike<br />
-                ♫ Playlove<br />
-                ♫ QEBEQ<br />
-                ♫ Rumlaut<br />
-                ♫ Temo Sayin<br />
-                ♫ Tom Hängs<br />
-                ♫ Trinidad<br />
-                ♫ Valentin Bösch<br />
-                ♫ mehr tba soon & surprise guests<br />
+                ♫ Goldcap (Habitas / Los Angeles) <br />
+                ♫ Milo Häfliger (Clandestine Artists / Sparklers)<br />
+                ♫ Ocenvs Orientalis (Kanto Records / Bar 25)<br />
+                ♫ Sarah Kreis (Amselcom)<br />
+                ♫ Andreas Ramos (Hive, Friedas Büxe)<br />
+                ♫ Are:Age<br />
+                ♫ Dani Posada (Klang Heimlich / RUND)<br />
+                ♫ Elrino (Elysia / Abartik)<br />
+                ♫ Temo Sayin (Empathie)<br />
+                ♫ Tom Hängs (Klang Heimlich)<br />
 
                 <div class="responsive">
                   <div class="gallery">
@@ -144,9 +136,9 @@
               </div>
                 -->
 
-              
-              <a style="font-size:1.8rem" target="_blank" href="https://ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html">
-                  Tickets hier kaufen
+
+              <a style="font-size:1.8rem" target="_blank" href="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708">
+                  Tickets bei TICKETINO
               </a>
 
 
