--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -128,19 +128,20 @@
             </div>
             <div id="tickets" class="tab-pane fade">
 
-              <!--
+
               <h3>Tickets</h3>
               <div>
-                  <script src="http://embed.ticketfrog.ch/api/safari-cookie-fix.js"></script>
-                  <iframe width="650" class="iframeTickets" height="2000" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1"></iframe>
+                  <iframe width="650" class="iframeTickets" height="2000"
+                    src="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708"></iframe>
               </div>
-                -->
 
 
-              <a style="font-size:1.8rem" target="_blank" href="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708">
+              <!--
+              <a style="font-size:1.8rem" target="_blank"
+                href="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708">
                   Tickets bei TICKETINO
               </a>
-
+            -->
 
             </div>
             <div id="contact" class="tab-pane fade">
