--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,7 +5,7 @@
 
 <div id="particle-canvas"></div>
 <div class="navbar-fixed-top" style=" width: 90px;  padding: 10px; margin-top: -10px; margin-left: 30px; font-size: 0.5em; background-color: #123033cc">
-   <a href="#tickets" class="smooth-goto"><h2>tickets kaufen</h2></a>
+   <a href="#tickets" class="scrolly-middle"><h2>tickets kaufen</h2></a>
 </div>
 
 <!-- Header -->
@@ -63,7 +63,7 @@
 <!-- Banner -->
 <section id="banner2">
   <header>
-    <h2>Mindset</h2>
+    <h3>Mindset</h3>
   </header>
   <div class="weare">
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor <br>
@@ -115,7 +115,7 @@
   <section id="banner" class=" style2" style="margin-top: 60px">
 			<article class="container ">
 				<header>
-					<h2>Gallerie</h2>
+					<h3>Gallerie</h3>
 					<p>Justo phasellus et aenean dignissim<br />
 					placerat cubilia purus lectus.</p>
 				</header>
@@ -153,7 +153,7 @@
         <header>
 
         </header>
-				<h2>Artists</h2>
+				<h3>Artists</h3>
         <div style="margin-top: 30px; margin-bottom: 70px"></div>
 
 			  <section>
@@ -225,8 +225,8 @@
 
 
 <div style="margin-bottom: -70px" class="box style3">
-    <header >
-			<h2>Music</h2>
+    <header>
+			<h3>Music</h3>
     </header>
 </div>
 
@@ -277,8 +277,8 @@
 									<div class="row">
 										<div class="12u">
 											<ul class="actions">
-												<li><input type="submit" value="login" /></li>
-												<li><input type="submit" value="Register" /></li>
+												<li><a href="#login" class="button style2 scrolly-middle">login</a></li>
+												<li><a href="#register" class="button style2 scrolly-middle">register</a></li>
 											</ul>
 										</div>
 									</div>
@@ -290,55 +290,48 @@
 	</section>
 </div>
 
-<section id="banner2" class=" style2" style="margin-top: 60px">
 
-  <section id="banner2" class=" style2" style="margin-top: 60px">
+
+
+<section id="login" class=" style2" style="margin-top: 60px">
   <section>
       <header>
       	<h2 >Tikets kaufen</h2>
       	<h2 style="font-size: 5em;">Login</h2>
      	</header>
-    	<div class="container">
-  				<form method="post" action="#">
-  						<div class="row"  >
-  						   <div class="col-lg-3 " ></div>
-                              <div class="col-lg-6" >
-  								<input class="text" type="text" name="name" id="name" value="" placeholder="Email" /></div>
-                              <div class="col-lg-3 " ></div>
-                              </div>
-                          <div class="row"  >
-                          <div class="col-lg-3 " ></div>
-  							<div class="col-lg-6">
-  								<input class="text" type="text" name="email" id="email" value="" placeholder="Password" /></div>
-                              <div class="col-lg-3 " ></div>
-  						</div>
 
 
-  						<div class="row">
-  							<div class="col-lg-12">
-  								<ul class="actions">
-  									<li><input type="submit" value="Submit" /></li>
-  									<li><input type="reset" class="style3" value="Clear Form" /></li>
-  								</ul>
-  							</div>
-  						</div>
-  					</form>
+      <div class="container">
+  				<form #formData='ngForm' class="loginForm" (ngSubmit)="onSubmitLogin(formData)">
+  	         <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
+						 <input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt" required>
 
+             <br />
+						 <div class="row">
+						   <div class="col-lg-12">
+								<ul class="actions">
+									<li><input type="submit" value="Submit" /></li>
+									<li><input type="reset" class="style3" value="Clear Form" /></li>
+								</ul>
+							</div>
+						</div>
 
+          </form>
         </div>
+
+      </section>
   </section>
-  </section>
 
 
 
 
-  <section id="banner2" class=" style2" style="margin-top: 60px">
-  <section>
+
+  <section id="register">
       <header>
           <h2 >Tikets kaufen</h2>
        <h2 style="font-size: 5em;">Register</h2>
      </header>
-    <div class="container ">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12">
 
@@ -363,10 +356,10 @@
   								<input type="password" placeholder="Passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
   							</div>
 
-                <!--
-                <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
-                <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
-                -->
+                <div class="6u">
+                  <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
+                  <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
+                </div>
 
               </div>
 
@@ -388,45 +381,3 @@
           </div>
         </div>
   </section>
-  </section>
-
-
-
-
-
-
-<!--
-<div class="signup-wrapper">
-    <div class="form-container">
-
-      <a routerLink="/login-email" id="goback">Login</a>
-      <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" id="goback" class="contactUs" >Kontakt</a>
-
-      <br />
-
-      <img class="imagelogo" src="../assets/images/logo.svg" />
-
-
-      <img class="imageRegister" src="../assets/images/register_text.jpg" />
-
-      <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
-
-      <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
-
-        <input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
-        <input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
-        <input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
-        <input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
-        <input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt form-control text-line" required>
-        <input type="password" placeholder="Passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
-
-        <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
-        <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
-
-
-        <button type="submit" class="basic-btn">Send</button>
-      </form>
-
-    </div>
-</div>
--->
